2012-03-05  Ales Cepek  <cepek@gnu.org>

	* updated version of review.hu.lang by Siki Zoltan, some
	  corrections in the Hungarian translation of GNU Gama

2011-08-22  Ales Cepek  <cepek@gnu.org>

	* two syntax errors reported by Siki Zoltan
		lib/gnu_gama/g3/g3_write_observation_xml.h
			@@ -46,7 +46,7 @@ namespace GNU_gama { namespace g3 {
			   {
			   private:

			-    mutable std::ostream& out;
			+    std::ostream& out;
		lib/gnu_gama/local/local_linearization.h
			@@ -67,7 +67,7 @@ namespace GNU_gama { namespace local {

			private:

			-      mutable PointData&   PD;
			+      PointData&           PD;

	The C++ Standard (7.1.1 Declarations, paragraph 8): The mutable
	specifier can be applied only to names of class data members and
	cannot be applied to names declared const or static, and cannot be
	applied to reference members.


............................................


1.11 2011-08-14  Ales Cepek  <cepek@gnu.org>

	* new release 1.11

2011-08-13  Ales Cepek  <cepek@gnu.org>

	* class ObservationVisitor renamed to BaseVisitor (possible use of
	abstract base visitor class in acyclic visitor pattern is not
	limited to observations)

2011-08-11  Ales Cepek  <cepek@gnu.org>

	* added a new intermediate helper template class Accept (in
	model.h) to unify definiton of accept() method in observational
	classes in gama-g3. Function accept(ObservationVisitor*) is a pure
	virtual method defined in the base Observation class.

2011-04-17  Ales Cepek  <cepek@gnu.org>

	* SVD class (matvec/svd.h) selected internal data members and
	variables declared volatile to suppress g++ optimization

2011-04-12  Ales Cepek  <cepek@gnu.org>

	* added Spanish translation of *.lang files supplied by Jokin
	Zurutuza <zurutuza@ujaen.es>

	* fixed a minor bug in formatting of adjustment general
	parameters (general_parameters.h)

2011-03-30  Ales Cepek  <cepek@gnu.org>

	* first draft of string functions Utf8::length() and Utf8::leftPad()
