@@ -193,7 +193,7 @@ is oriented east. Acceptable values are @code{ne}, @code{sw},
 @item
 @code{angles} @code{right-handed} defines counterclockwise observed angles
 and/or directions, value @code{left-handed} defines clockwise observed
-angles and/or directions (default value is @code{right-handed}).
+angles and/or directions (default value is @code{left-handed}).
 
 @c    epoch     double precision default 0.0 not null,
 @item
@@ -259,7 +259,7 @@ conf_id|conf_name|sigma_apr|conf_pr|tol_abs|sigma_act  |update_cc|...
 
 ... axes_xy|angles      |epoch|algorithm|ang_units|latitude|ellipsoid
 ---------------------------------------------------------------------
-... ne     |right-handed|0.0  |svd      |400      |50.0    |
+... ne     |left-handed|0.0  |svd      |400      |50.0    |
 @end example
 
 The list of @code{description} table attributes follows.
